--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                         Contact me
                         <i class="fas fa-arrow-right"></i>
                     </a>
-                    
+                    <a href="https://pisst.shop" class="button button-outline">
+                        shop
+                    </a>
                 </div>
             </div>
         </div>
