--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         Contact me
                         <i class="fas fa-arrow-right"></i>
                     </a>
-                    <a href="https://pisst.shop" class="button button-outline">
-                        shop
+                    <a href="https://eer.lol" class="button button-outline">
+                        Bio
                     </a>
                 </div>
             </div>
