--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <h2 class="footer-title">Order</h2>
                     <p>I'm currently available for freelance projects. If you have a project that needs some creative coding, feel free to make your order from our orders bot or contact me on t.me/pisst.</p>
                     <div class="social-links">
-                        <a href="https://t.me/Developservices" class="social-icon">
+                        <a href="https://t.me/programslol" class="social-icon">
                             <i class="fab fa-telegram"></i>
                         </a>
                         <a href="#" class="social-icon">
