--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="badge">Who's er ?</div>
-                <h1 class="hero-title">Er is a developer from France with more than 9 years of experience </h1>
+                <h1 class="hero-title">Er is a developer with more than 9 years of experience.</h1>
                 
                 <div class="button-group">
                     <a href="https://t.me/pisst" class="button button-primary">
