--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         Contact me
                         <i class="fas fa-arrow-right"></i>
                     </a>
-                    <a href="https://eer.lol" class="button button-outline">
-                        Bio
+                    <a href="https://t.me/comprojects" class="button button-outline">
+                       Portfolio
                     </a>
                 </div>
             </div>
