--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://files.catbox.moe/7lpfst.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -17,8 +18,8 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <div class="badge">Who's er ?</div>
-                <h1 class="hero-title">Er is a developer with more than 9 years of experience.</h1>
+                <div class="badge">Who's lorem?</div>
+                <h1 class="hero-title">Lorem is a developer with more than 9 years of experience.</h1>
                 
                 <div class="button-group">
                     <a href="https://t.me/pisst" class="button button-primary">
@@ -168,7 +169,7 @@
             </div>
             
             <div class="copyright">
-                © 2025 er All rights reserved.
+                © 2025 Lorem All rights reserved.
             </div>
         </div>
     </footer>
