--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="hero">
             <img src="https://files.catbox.moe/osmts8.jpg" alt="Profile Picture">
             <div class="hero-text">
-                <h1>Who's Ren</h1>
-                <p>A developer with 8+ years of expertise in building responsive, user-centric web applications and robust scripting solutions. Passionate about crafting clean, efficient code and optimizing user experiences. Skilled in modern JavaScript frameworks, cross-browser compatibility, and automation workflows.</p>
+                <h1>Who's Emir</h1>
+                <p>A developer with 8+ years of expertise in building responsive, user-centric web applications and robust scripting solutions. Passionate about crafting clean, efficient code and optimizing user experiences. Skilled in modern JavaScript frameworks, cross-browser compatibility, and automation workflows. Experienced in developing custom bots for platforms like Discord and Telegram, integrating automation into everyday tasks.</p>
             </div>
         </div>
     </section>
