--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programs.lol</title>
-    <link rel="icon" type="image/x-icon" href="https://files.catbox.moe/9xllmu.jpg">
+    <link rel="icon" type="image/x-icon" href="https://files.catbox.moe/nkkjfb.png">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -22,7 +22,7 @@
 
     <section id="home">
         <div class="hero">
-            <img src="https://files.catbox.moe/osmts8.jpg" alt="Profile Picture">
+            <img src="https://files.catbox.moe/nkkjfb.png" alt="Profile Picture">
             <div class="hero-text">
                 <h1>Who's Emir</h1>
                 <p>A developer with 8+ years of expertise in building responsive, user-centric web applications and robust scripting solutions. Passionate about crafting clean, efficient code and optimizing user experiences. Skilled in modern JavaScript frameworks, cross-browser compatibility, and automation workflows. Experienced in developing custom bots for platforms like Discord and Telegram, integrating automation into everyday tasks.</p>
