--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="services-container">
         <div class="service-card">
             <h3>Front-End Development</h3>
-            <p class="price">From $100</p>
+            <p class="price">Starting From $100</p>
             <ul>
                 <li><i class="fas fa-check"></i> Custom and modern UI</li>
                 <li><i class="fas fa-check"></i> Responsive design</li>
@@ -75,7 +75,7 @@
         <div class="service-card popular">
             <div class="popular-badge">Most Popular</div>
             <h3>Discord & Telegram Bots</h3>
-            <p class="price">From $50</p>
+            <p class="price">Starting From $50</p>
             <ul>
                 <li><i class="fas fa-check"></i> Custom features & commands</li>
                 <li><i class="fas fa-check"></i> Auto-moderation systems</li>
@@ -85,7 +85,7 @@
         </div>
         <div class="service-card">
             <h3>Automation Tools</h3>
-            <p class="price">From $50</p>
+            <p class="price">Starting From $100</p>
             <ul>
                 <li><i class="fas fa-check"></i> Task automation scripts</li>
                 <li><i class="fas fa-check"></i> Data scraping/reporting</li>
