--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <span>@abbas</span>
                 </div>
             </div>
-            <p>"Shoutout to @pisst for the smoothest $200 deal! Fast, reliable, and professional. Highly recommended!"</p>
+            <p>"Shoutout to emir for the smoothest $200 deal! Fast, reliable, and professional. Highly recommended!"</p>
         </div>
         <div class="review-card">
             <div class="review-header">
@@ -119,7 +119,7 @@
                     <span>@N/D</span>
                 </div>
             </div>
-            <p>"Vouch for @pisst. Fast and easy to work with!"</p>
+            <p>"Fast and easy to work with!"</p>
         </div>
         <div class="review-card">
             <div class="review-header">
@@ -130,7 +130,7 @@
                     <span>@VantaADS</span>
                 </div>
             </div>
-            <p>"Vouch for @pisst, went first, deal was perfect."</p>
+            <p>"went first, deal was perfect."</p>
         </div>
         <div class="carousel-buttons">
             <button class="carousel-btn prev-btn"><i class="fas fa-chevron-left"></i></button>
