--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
         <div class="social-links">
             <a href="https://t.me/pisst"><i class="fab fa-telegram"></i></a>
-            <a href="https://t.me/programslol"><i class="fa-solid fa-globe"></i></a>
+            <a href="https://dsc.gg/vada"><i class="fa-brands fa-discord"></i></a>
             <a href="mailto:"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </div>
