--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="hero">
         <img src="https://files.catbox.moe/nkkjfb.png" alt="Profile Picture">
         <div class="hero-text">
-            <h1>Who's Emir</h1>
+            <h1>Who's me</h1>
             <p>Developer with 8+ years of experience building responsive websites, automation scripts, and custom bots for platforms like Discord and Telegram. Passionate about clean code, user experience, and efficient workflows.</p>
         </div>
     </div>
