--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
         </div>
         <div class="social-links">
             <a href="https://t.me/pisst"><i class="fab fa-telegram"></i></a>
-            <a href="https://t.me/programslol"><i class="fa-solid fa-globe"></i></a>
-            <a href="mailto:"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://instagram.com/fdmr"><i class="fa-brands fa-instagram"></i></a>
+            <a href="mailto:covids@telegmail.com"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </div>
     <div class="footer-bottom">
