--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/age.js"></script>
     <script src="js/fetch.js"></script>
 
-    <title>K-390</title>
+    <title>covid</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="msg">
             <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
-            <p>I'm K-390 Self-taught, Frontend Developer creating modern, efficient user interfaces, I work as a
+            <p>I'm Self-taught, Frontend Developer creating modern, efficient user interfaces, I work as a
                 Freelancer. <a href="https://linktr.ee/codmy"> My links</a> </p>
         </div>
 
