Update meta description and title in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="codmy - Web  Developer">
+     <meta name="description" content="Aiden - Web Developer">
      <link rel="icon" type="" href="assets/icon.png">
     <link rel="stylesheet" href="assets/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@
     <script src="js/age.js"></script>
     <script src="js/fetch.js"></script>
 
-    <title>covid</title>
+    <title>Aiden</title>
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="msg">
             <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
-            <p>I'm Self-taught, Frontend Developer creating modern, efficient user interfaces, I work as a
+            <p>I'm Aiden. Self-taught, Frontend Developer creating modern, efficient user interfaces, I work as a
                 Freelancer. <a href="https://linktr.ee/codmy"> My links</a> </p>
         </div>
 
