--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
         <div class="msg">
-            <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
+            <img class="pf" src="assets/pfp.jpg" alt="ProfilePicture">
             <p>I'm Aiden. Self-taught, Frontend Developer creating modern, efficient user interfaces, I work as a
                 Freelancer. <a href="https://linktr.ee/codmy"> My links</a> </p>
         </div>
