--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         </div>
 
         <div class="msg">
-            <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
+            <img class="pf" src="assets/pfp.jpg" alt="ProfilePicture">
             <p>My Skills: <span class="skills">Html, Css, JavaScript, TypeScript, Git.</span></p>
         </div>
 
         <div class="msg">
-            <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
+            <img class="pf" src="assets/pfp.jpg" alt="ProfilePicture">
             <ul>
                 <li><b>Fun facts:</b></li>
                 <li>- I'm <span id="current-age"></span> years old</li>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="msg">
-            <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
+            <img class="pf" src="assets/pfp.jpg" alt="ProfilePicture">
             <div>
                 <p>Currently living in <a href="https://maps.apple.com/place?auid=10820457647156795134&address=Algeria&coordinate=36.7555887%2C2.9777192&name=Algeria&lsp=7618">Algeria </a>📍</p>
                 <img class="alg" src="assets/city.png" alt="Algeria">
