--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Aiden - Web Developer">
+     <meta name="description" content="Aident - Web Developer">
      <link rel="icon" type="" href="assets/icon.png">
     <link rel="stylesheet" href="assets/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,25 +13,25 @@
     <script src="js/age.js"></script>
     <script src="js/fetch.js"></script>
 
-    <title>Aiden</title>
+    <title>Aident</title>
 </head>
 
 <body>
 
     <div class="container">
         <div class="msg">
-            <img class="pf" src="assets/pfp.jpg" alt="ProfilePicture">
+            <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
             <p>I'm Aiden. Self-taught, Frontend Developer creating modern, efficient user interfaces, I work as a
-                Freelancer. <a href="https://linktr.ee/codmy"> My links</a> </p>
+                Freelancer. <a href="links.html"> My links</a> </p>
         </div>
 
         <div class="msg">
-            <img class="pf" src="assets/pfp.jpg" alt="ProfilePicture">
+            <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
             <p>My Skills: <span class="skills">Html, Css, JavaScript, TypeScript, Git.</span></p>
         </div>
 
         <div class="msg">
-            <img class="pf" src="assets/pfp.jpg" alt="ProfilePicture">
+            <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
             <ul>
                 <li><b>Fun facts:</b></li>
                 <li>- I'm <span id="current-age"></span> years old</li>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="msg">
-            <img class="pf" src="assets/pfp.jpg" alt="ProfilePicture">
+            <img class="pf" src="assets/ProfilePicture.png" alt="ProfilePicture">
             <div>
                 <p>Currently living in <a href="https://maps.apple.com/place?auid=10820457647156795134&address=Algeria&coordinate=36.7555887%2C2.9777192&name=Algeria&lsp=7618">Algeria </a>📍</p>
                 <img class="alg" src="assets/city.png" alt="Algeria">
