--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
                 <div class="flex flex-wrap justify-center gap-2" id="social-links">
                     
                     <a href="https://github.com/realaiden" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600"><i data-lucide="github" class="w-5 h-5"></i></a>
-                    <a href="https://instagram.com/pooraiden" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600"><i data-lucide="instagram" class="w-5 h-5"></i></a>
-                    <a href="https://x.com/pooraiden" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600"><i data-lucide="twitter" class="w-5 h-5"></i></a>
+                    <a href="https://instagram.com/aiden.tsx" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600"><i data-lucide="instagram" class="w-5 h-5"></i></a>
+                  <a href="https://steamcommunity.com/id/aiden.tsx" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600">
+  <i data-lucide="gamepad-2" class="w-5 h-5"></i>
+</a>
+
+                   <a href="https://x.com/pooraiden" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600"><i data-lucide="twitter" class="w-5 h-5"></i></a>
                     <a href="mailto:aidens@telegmail.com" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600"><i data-lucide="mail" class="w-5 h-5"></i></a>
                 </div>
             </div>
