--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     
                     <a href="https://github.com/realaiden" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600"><i data-lucide="github" class="w-5 h-5"></i></a>
                     <a href="https://instagram.com/aiden.tsx" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600"><i data-lucide="instagram" class="w-5 h-5"></i></a>
-                  <a href="https://steamcommunity.com/id/aiden.tsx" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600">
+                  <a href="https://steamcommunity.com/id/isaiden" class="p-2.5 bg-neutral-800/50 rounded-lg text-neutral-400 hover:text-white hover:bg-neutral-700/80 transition-all duration-200 border border-transparent hover:border-neutral-600">
   <i data-lucide="gamepad-2" class="w-5 h-5"></i>
 </a>
 
