--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Aiden</title>
+    <link rel="shortcut icon" href="https://files.catbox.moe/devpi4.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <title>Aiden</title>
   <script type="importmap">
 {
   "imports": {
@@ -22,10 +24,27 @@
             <!-- 1-->
             <div class="section-row">
                 <div class="text-content">
-                    <h1>Hi, I’m Amir, an 18 year old <span style="color: rgb(184, 250, 193);">Junior Frontend Developer</span> from Algeria.</h1>
+                    <h1>Hi, I’m Amir, an 18 year old <span style="color: #b8fac1;">Junior Frontend Developer</span> from Algeria.</h1>
                     <p>
                         I’m a junior frontend developer with a strong passion for building clean and responsive web interfaces. My interest in coding began when I was 13, and at 17 I started learning seriously. I’m still learning and improving every day, focusing on modern frontend technologies and growing into a skilled, reliable developer.
                     </p>
+                    <div style="display: flex; gap: 1.5rem; margin-top: 2rem;">
+                        <a href="https://github.com/realaiden" target="_blank" rel="noopener noreferrer" style="display: flex; align-items: center; justify-content: center; width: 2.5rem; height: 2.5rem; background-color: #404040; border-radius: 0.5rem; color: #ffffff; transition: all 0.3s ease; text-decoration: none; font-size: 1.25rem;" onmouseover="this.style.backgroundColor='#1DB954'" onmouseout="this.style.backgroundColor='#404040'">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://instagram.com/aiden.tsx" target="_blank" rel="noopener noreferrer" style="display: flex; align-items: center; justify-content: center; width: 2.5rem; height: 2.5rem; background-color: #404040; border-radius: 0.5rem; color: #ffffff; transition: all 0.3s ease; text-decoration: none; font-size: 1.25rem;" onmouseover="this.style.backgroundColor='#1DB954'" onmouseout="this.style.backgroundColor='#404040'">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://x.com/pooraiden" target="_blank" rel="noopener noreferrer" style="display: flex; align-items: center; justify-content: center; width: 2.5rem; height: 2.5rem; background-color: #404040; border-radius: 0.5rem; color: #ffffff; transition: all 0.3s ease; text-decoration: none; font-size: 1.25rem;" onmouseover="this.style.backgroundColor='#1DB954'" onmouseout="this.style.backgroundColor='#404040'">
+                            <i class="fa-brands fa-x-twitter"></i>
+                        </a>
+                        <a href="https://steamcommunity.com/id/isaiden/" target="_blank" rel="noopener noreferrer" style="display: flex; align-items: center; justify-content: center; width: 2.5rem; height: 2.5rem; background-color: #404040; border-radius: 0.5rem; color: #ffffff; transition: all 0.3s ease; text-decoration: none; font-size: 1.25rem;" onmouseover="this.style.backgroundColor='#1DB954'" onmouseout="this.style.backgroundColor='#404040'">
+                            <i class="fab fa-steam"></i>
+                        </a>
+                        <a href="mailto:aidens@telegmail.com" style="display: flex; align-items: center; justify-content: center; width: 2.5rem; height: 2.5rem; background-color: #404040; border-radius: 0.5rem; color: #ffffff; transition: all 0.3s ease; text-decoration: none; font-size: 1.25rem;" onmouseover="this.style.backgroundColor='#1DB954'" onmouseout="this.style.backgroundColor='#404040'">
+                            <i class="fas fa-envelope"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="image-content">
                     <img
@@ -89,5 +108,7 @@
     </div>
 
 <script src="my.js"></script>
+<script src="fetch.js"></script>
+    
 </body>
 </html>
