--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- 1-->
             <div class="section-row">
                 <div class="text-content">
-                    <h1>Hi, I’m Amir, an 18 year old <span style="color: #b8fac1;">Junior Frontend Developer</span> from Algeria.</h1>
+                    <h1>Hi, I’m Aiden, an 18 year old <span style="color: #b8fac1;">Junior Frontend Developer</span> from Algeria.</h1>
                     <p>
                         I’m a junior frontend developer with a strong passion for building clean and responsive web interfaces. My interest in coding began when I was 13, and at 17 I started learning seriously. I’m still learning and improving every day, focusing on modern frontend technologies and growing into a skilled, reliable developer.
                     </p>
